--- a/Source/TheCat.WindowsPhone/EditFileView.xaml
+++ b/Source/TheCat.WindowsPhone/EditFileView.xaml
@@ -1,4 +1,4 @@
-﻿<phone:PhoneApplicationPage 
+﻿<phone:PhoneApplicationPage xmlns:my="clr-namespace:TheCat.WindowsPhone.Controls"  
     x:Class="TheCat.WindowsPhone.EditFileView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -17,7 +17,7 @@
     <!--LayoutRoot is the root grid where all page content is placed-->
     <Grid x:Name="LayoutRoot" Background="Transparent">
         <!--Pivot Control-->
-        <controls:Pivot Title="FILE">
+        <controls:Pivot Name="PagePivot" Title="FILE">
             <!--Pivot item one-->
             <controls:PivotItem Header="Properties">
                 <Grid>
@@ -33,11 +33,24 @@
             </controls:PivotItem>
 
             <!--Pivot item two-->
-            <controls:PivotItem Header="Content">
+            <controls:PivotItem Name="PivotItemContent" Header="Content">
                 <Grid>
+                    <!--
                     <ScrollViewer Height="530" VerticalScrollBarVisibility="Auto">
-                        <TextBox Height="520" HorizontalAlignment="Left" Name="textBox1" Text="{Binding Content}" VerticalAlignment="Top" Width="460" />
+                        <my:CodeEditorUserControl x:Name="CodeEditor"
+                                                   />
+                    -->
+                    <my:CodeEditorUserControl x:Name="CodeEditor" 
+                                              Text="{Binding Content}" />
+                    <!--  
+                        <TextBox Height="520" HorizontalAlignment="Left" Name="textBox1" Text="{Binding Content}" VerticalAlignment="Top" Width="460" 
+                             Style="{StaticResource ScrollableTextBoxStyle}" 
+                             VerticalScrollBarVisibility="Visible" 
+                             HorizontalScrollBarVisibility="Visible" />
+                       -->  
+                    <!--
                     </ScrollViewer>
+                    -->
                 </Grid>
             </controls:PivotItem>
         </controls:Pivot>
