--- a/Source/TheCat.WindowsPhone/App.xaml
+++ b/Source/TheCat.WindowsPhone/App.xaml
@@ -18,6 +18,8 @@
         <clr:String x:Key="NoneItemsInThisFolder">This folder is empty</clr:String>
         <clr:String x:Key="TextConsoleTitle">console</clr:String>
         <clr:String x:Key="GrapicWindowTitle">window</clr:String>
+        <clr:String x:Key="SettingsTitle">settings</clr:String>
+        <clr:String x:Key="AboutTitle">about</clr:String>        
 
         <!-- This style is based on MSDN example: http://code.msdn.microsoft.com/wpapps/Scrollable-TextBox-for-007e3836/view/Reviews -->
         <Style x:Key="ScrollableTextBoxStyle" TargetType="TextBox">
