--- a/Source/TheCat.WindowsPhone/EditFilePage.xaml
+++ b/Source/TheCat.WindowsPhone/EditFilePage.xaml
@@ -37,6 +37,9 @@
         <shell:ApplicationBar IsVisible="True" IsMenuEnabled="True">
             <shell:ApplicationBarIconButton IconUri="/Images/save.png" Text="Save" Click="SaveButton_Click" />
             <shell:ApplicationBarIconButton IconUri="/Images/cancel.png" Text="Cancel" Click="CancelButton_Click"/>
+            <shell:ApplicationBar.MenuItems>
+                <shell:ApplicationBarMenuItem x:Name="save_and_run" Text="save and run" Click="save_and_run_Click"/>
+            </shell:ApplicationBar.MenuItems>
         </shell:ApplicationBar>
     </phone:PhoneApplicationPage.ApplicationBar>
 
